[package]
authors = ["Xuanwo <github@xuanwo.io>>"]
categories = ["command-line-utilities"]
description = "Replace with description"
documentation = "https://docs.rs/globiter"
repository = "https://github.com/Xuanwo/globiter"
edition = "2021"
license = "Apache-2.0"
name = "globiter"
version = "0.0.0"

[dependencies]
