[package]
authors = ["Xuanwo <github@xuanwo.io>", "wfxr <wenxuangm@gmail.com>"]
categories = ["command-line-utilities"]
description = "Replace with description"
documentation = "https://docs.rs/globiter"
repository = "https://github.com/Xuanwo/globiter"
edition = "2021"
license = "Apache-2.0"
name = "globiter"
version = "0.1.0"

[dependencies]
anyhow = "1.0.57"
itertools = "0.11.0"
